--- a/WebChatClient/package.json
+++ b/WebChatClient/package.json
@@ -8,7 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@microsoft/signalr": "^6.0.10"
+    //"@microsoft/signalr": "^6.0.10" // copied locally in wwwroot/js/signalr.min.js
   },
   "devDependencies": {},
   "keywords": [],
