--- a/SignalRChatWithDiffClient/Properties/launchSettings.json
+++ b/SignalRChatWithDiffClient/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "SignalRChatWithDiffClient": {
+    "Server": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
